// Package client 结算数据提供者实现
package client

import (
	"context"
	"fmt"
	"time"

	"github.com/eidos-exchange/eidos/eidos-jobs/internal/jobs"
)

// SettlementDataProviderImpl 结算数据提供者实现
// TODO: 完成 proto 定义后实现实际功能
type SettlementDataProviderImpl struct {
	chainClient   *ChainClient
	tradingClient *TradingClient
}

// NewSettlementDataProvider 创建结算数据提供者
func NewSettlementDataProvider(chainClient *ChainClient, tradingClient *TradingClient) *SettlementDataProviderImpl {
	return &SettlementDataProviderImpl{
		chainClient:   chainClient,
		tradingClient: tradingClient,
	}
}

// GetPendingTrades 获取待结算的交易
// TODO: 需要在 trading proto 中定义 ListPendingSettlementTrades RPC
func (p *SettlementDataProviderImpl) GetPendingTrades(ctx context.Context, limit int) ([]*jobs.PendingTrade, error) {
	return nil, fmt.Errorf("not implemented: ListPendingSettlementTrades RPC not defined in proto")
}

// CreateSettlementBatch 创建结算批次
// TODO: 需要在 trading proto 中定义 CreateSettlementBatch RPC
func (p *SettlementDataProviderImpl) CreateSettlementBatch(ctx context.Context, tradeIDs []string) (*jobs.SettlementBatch, error) {
	return nil, fmt.Errorf("not implemented: CreateSettlementBatch RPC not defined in proto")
}

// SubmitSettlementBatch 提交结算批次到链上
// TODO: 需要在 chain proto 中定义 SubmitSettlement RPC 和 trading proto 中相关方法
func (p *SettlementDataProviderImpl) SubmitSettlementBatch(ctx context.Context, batchID string) error {
	return fmt.Errorf("not implemented: SubmitSettlement RPC not defined in proto")
}

// GetTimedOutBatches 获取超时的批次
// TODO: 需要在 trading proto 中定义 ListSettlementBatches RPC
func (p *SettlementDataProviderImpl) GetTimedOutBatches(ctx context.Context, timeout time.Duration) ([]*jobs.SettlementBatch, error) {
	return nil, fmt.Errorf("not implemented: ListSettlementBatches RPC not defined in proto")
}

// RetrySettlementBatch 重试结算批次
// TODO: 需要在 trading proto 中定义相关 RPC
func (p *SettlementDataProviderImpl) RetrySettlementBatch(ctx context.Context, batchID string) error {
	return fmt.Errorf("not implemented: settlement retry RPC not defined in proto")
}

// MarkBatchFailed 标记批次失败
// TODO: 需要在 trading proto 中定义 UpdateSettlementBatchStatus RPC
func (p *SettlementDataProviderImpl) MarkBatchFailed(ctx context.Context, batchID string, reason string) error {
	return fmt.Errorf("not implemented: UpdateSettlementBatchStatus RPC not defined in proto")
}

// GetLastBatchTime 获取上次批次创建时间
// TODO: 需要在 trading proto 中定义 GetLastSettlementBatchTime RPC
func (p *SettlementDataProviderImpl) GetLastBatchTime(ctx context.Context) (time.Time, error) {
	return time.Time{}, fmt.Errorf("not implemented: GetLastSettlementBatchTime RPC not defined in proto")
}

// GetPendingTradeCount 获取待结算交易数量
// TODO: 需要在 trading proto 中定义 GetPendingSettlementTradeCount RPC
func (p *SettlementDataProviderImpl) GetPendingTradeCount(ctx context.Context) (int, error) {
	return 0, fmt.Errorf("not implemented: GetPendingSettlementTradeCount RPC not defined in proto")
}

// Ensure SettlementDataProviderImpl implements jobs.SettlementDataProvider
var _ jobs.SettlementDataProvider = (*SettlementDataProviderImpl)(nil)
